--- a/edukasi.html
+++ b/edukasi.html
@@ -156,20 +156,45 @@
 </head>
 
 <body>
-  <!-- Pulau Selection -->
-  <div id="pulauSelection" class="flex flex-col items-center justify-center h-screen">
-    <h1 class="text-2xl mb-4">Pilih Pulau</h1>
-    <div class="card-container">
-      <div class="card" onclick="showRumahAdat('Jawa')">Pulau Jawa</div>
-      <div class="card" onclick="showRumahAdat('Sumatera')">Pulau Sumatera</div>
-      <div class="card" onclick="showRumahAdat('Sulawesi')">Pulau Sulawesi</div>
-      <div class="card" onclick="showRumahAdat('Kalimantan')">Pulau Kalimantan</div>
-      <div class="card" onclick="showRumahAdat('Bali')">Pulau Bali</div>
-      <div class="card" onclick="showRumahAdat('Papua')">Pulau Papua</div>
-      <div class="card" onclick="showRumahAdat('Maluku')">Kepulauan Maluku</div>
-      <div class="card" onclick="showRumahAdat('Nusa Tenggara')">Kepulauan Nusa Tenggara</div>
+<!-- Pulau Selection -->
+<div id="pulauSelection" class="flex flex-col items-center justify-center h-screen">
+  <h1 class="text-2xl font-bold mb-4">Pilih Pulau</h1>
+  <div class="card-container grid grid-cols-2 gap-4">
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Jawa')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7l6 6-6 6M21 7l-6 6 6 6" /></svg>
+      <span>Pulau Jawa</span>
+    </div>
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Sumatera')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" /></svg>
+      <span>Pulau Sumatera</span>
+    </div>
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Sulawesi')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" /></svg>
+      <span>Pulau Sulawesi</span>
+    </div>
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Kalimantan')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11l7-7 7 7M5 19l7-7 7 7" /></svg>
+      <span>Pulau Kalimantan</span>
+    </div>
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Bali')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4a1 1 0 001 1h3m10 10h3v4m-7 0a2 2 0 002-2m-6 0a2 2 0 002 2" /></svg>
+      <span>Pulau Bali</span>
+    </div>
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Papua')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c1.5 0 2.72 1.1 2.72 2.72 0 .95-.38 1.8-1 2.39l-4.2 4.2a1 1 0 01-1.4-1.4l4.2-4.2c.59-.62 1.44-1 2.39-1z" /></svg>
+      <span>Pulau Papua</span>
+    </div>
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Maluku')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6M9 8h6m2 8H7a1 1 0 00-1 1v3h10v-3a1 1 0 00-1-1zm-1 1a1 1 0 110 2 1 1 0 010-2z" /></svg>
+      <span>Kepulauan Maluku</span>
+    </div>
+    <div class="card bg-blue-100 p-4 rounded-lg shadow-lg flex items-center cursor-pointer hover:bg-blue-200" onclick="showRumahAdat('Nusa Tenggara')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l3.3-3.3 4.7 4.6 4.7-4.7 3.3 3.3 4 4-3 3-4-4-4.7 4.7-4.7-4.7L3 16z" /></svg>
+      <span>Kepulauan Nusa Tenggara</span>
     </div>
   </div>
+</div>
+
   <a href="index.html" class="back-btn">Back</a>
 <!-- Slider Container -->
 <div class="slider-container hidden bg-cover bg-center h-40 bg-blue-500" id="sliderContainer" style="background-image: url('your-image-url.jpg');">
