--- a/puzzle-baduy.html
+++ b/puzzle-baduy.html
@@ -52,7 +52,16 @@
     text-decoration: none;
     font-weight: bold;
     transition: background-color 0.3s ease;
+    
 }
+.puzzle-piece:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+/* White overlay effect */
+
+
 
         /* Animation for placing a puzzle piece */
         .placed-piece {
