--- a/edukasi.html
+++ b/edukasi.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
     body {
-      background: linear-gradient(135deg, #1e90ff, #ff7f50);
+      background:url('assets/images/bg-edukasi.jpg') no-repeat center center fixed;
       color: white;
+      background-size: cover;
       min-height: 100vh;
       display: flex;
       justify-content: center;
