--- a/puzzle-jakarta.html
+++ b/puzzle-jakarta.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puzzle Game</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert Library -->
     <style>
         .puzzle-piece {
             width: 100px;
@@ -13,7 +14,32 @@
             cursor: pointer;
             background-size: 300%;
             background-repeat: no-repeat;
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
+
+        .puzzle-piece:hover {
+            transform: scale(1.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .puzzle-piece.selected {
+    position: relative;
+    border: 2px solid white; /* Optional: Adds a white border */
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.7); /* Optional: Soft glow effect */
+}
+
+.puzzle-piece.selected::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5); /* Adjust opacity for the white overlay */
+    pointer-events: none;
+}
+
 
         .puzzle-slot {
             width: 100px;
@@ -29,30 +55,30 @@
         }
 
         .back-btn {
-    position: fixed;
-    left: 1rem;
-    bottom: 1rem;
-    background-color: #2b6cb0;
-    color: white;
-    padding: 0.75rem 1.5rem;
-    border-radius: 0.5rem;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
+            position: fixed;
+            left: 1rem;
+            bottom: 1rem;
+            background-color: #2b6cb0;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
 
-.reset-btn {
-    position: fixed;
-    right: 1rem;
-    bottom: 1rem;
-    background-color: red;
-    color: white;
-    padding: 0.75rem 1.5rem;
-    border-radius: 0.5rem;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
+        .reset-btn {
+            position: fixed;
+            right: 1rem;
+            bottom: 1rem;
+            background-color: red;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
 
         /* Animation for placing a puzzle piece */
         .placed-piece {
@@ -90,6 +116,7 @@
     <script>
         const puzzleImages = [
             'assets/images/jakarta.jpg',
+
         ];
 
         let currentImageIndex = 0;
@@ -134,7 +161,13 @@
         }
 
         function selectPiece(event) {
+            // Remove the 'selected' class from any previously selected piece
+            if (selectedPiece) {
+                selectedPiece.classList.remove('selected');
+            }
+            // Set the new selected piece and add the 'selected' class
             selectedPiece = event.target;
+            selectedPiece.classList.add('selected');
         }
 
         function placePiece(event) {
@@ -168,7 +201,12 @@
             });
 
             if (solved && slots.length === 9) {
-                alert('Yee! Puzzle sudah diselesaikan');
+                Swal.fire({
+                    title: 'Yey!',
+                    text: 'Puzzle sudah selesai',
+                    icon: 'success',
+                    confirmButtonText: 'OK'
+                });
             }
         }
 
