--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v6m0 4v.01"></path>
           <path stroke-linecap="round" stroke-linejoin="round" d="M4 12h16"></path>
         </svg>
-        Edukasi
+        Belajar
       </a>
     
       <!-- Quiz Button with Wavy Effect -->
@@ -235,13 +235,13 @@
         <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75l7.5 4.5-7.5 4.5V6.75z"></path>
         </svg>
-        Quiz
+        Kuis
       </a>
       <a href="#puzzle" id="puzzle-btn" class="wavy-btn">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75l7.5 4.5-7.5 4.5V6.75z"></path>
         </svg>
-        Puzzle
+        Bermain
       </a>
     
       <!-- Keluar Button with regular styling -->
