--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
   </div>
 
   <!-- Audio file -->
-  <audio id="audio" src="music.mp3"></audio>
+  <audio id="audio" src="happy.mp3"></audio>
   <button id="suara-btn" class="suara-btn" onclick="toggleMusic()">
     <svg id="suara-icon" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <!-- Ikon Speaker On (dengan gelombang suara) -->
