--- a/edukasi.html
+++ b/edukasi.html
@@ -16,7 +16,8 @@
       display: flex;
       justify-content: center;
       padding: 1rem;
-      font-family: 'Poppins', sans-serif; /* Updated font */
+      font-family: 'Comic Sans MS', 'Comic Sans', sans-serif;
+
     }
 
     .card-container {
@@ -224,13 +225,17 @@
   </svg>
   Back
 </a>
+
 <!-- Slider Container -->
-<div class="slider-container hidden bg-cover bg-center h-40 bg-blue-500" id="sliderContainer" style="background-image: url('your-image-url.jpg');">
+<div class="slider-container hidden bg-cover bg-center h-40 " id="sliderContainer" style="background-image: url('your-image-url.jpg');">
+  <h1 class="text-2xl text-center font-bold mb-4 bg-blend-darken">Klik untuk melihat rumah</h1>
+  <div class="bg-blue-500">
   <div id="prev" class="arrow-btn prev">&larr;</div>
-  <div id="slider" class="slider">
+  <div id="slider" class="slider text-2xl pb-20">
     <!-- Dynamic Slides will be injected here -->
-  </div>
-  <div id="next" class="arrow-btn next">&rarr;</div>
+ </div>
+  <div id="next" class="arrow-btn next">&rarr;</div></div>
+   <h1 class="text-2xl font-bold mb-4">Pilih Pulau</h1>
   <button id="backToPulauSelection" class="back-btn">Kembali ke Pilih Pulau</button>
 </div>
 
